# serverless-rust-example

./: .gitignore  README.md
backend/: Cargo.toml  example_request.json  package.json  serverless.yml
backend/simple-get/: Cargo.toml
backend/simple-get/src/: main.rs
backend/simple-get2/: Cargo.toml
backend/simple-get2/src/: main.rs
