[package]
name = "simple-get2"
version = "0.1.0"
authors = ["Hikaru Hasegawa <drumscohika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde_json = "^1"
env_logger = "0.8.3"
log = "0.4"
